--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -1,100 +1,2 @@
 TrainEnv:
-  sections:
-  - target:
-    - -4.0
-    - 4.0
-    - -3.5
-    offset:
-    - 0
-    - 1.5
-    - -1.5
-
-  - target:
-    - -14.0
-    - -6.0
-    - -12.5
-    offset:
-    - -4.0
-    - 4.0
-    - -3.5
-
-  - target:
-    - -14.0
-    - -6.0
-    - -12.0
-    offset:
-    - -14.0
-    - -6.0
-    - -12.5
-
-  - target:
-    - -24.0
-    - -16.0
-    - -21.0
-    offset:
-    - -14.0
-    - -6.0
-    - -12.0
-
-  - target:
-    - -24.0
-    - -16.0
-    - -20.5
-    offset:
-    - -24.0
-    - -16.0
-    - -21.0
-
-  - target:
-    - -34.0
-    - -26.0
-    - -10.0
-    offset:
-    - -24.0
-    - -16.0
-    - -20.5
-
-  - target:
-    - -24.5
-    - -36.0
-    - -19.0
-    offset:
-    - -34.0
-    - -26.0
-    - -10.0
-
-  - target:
-    - -24.0
-    - -36.0
-    - -18.5
-    offset:
-    - -24.5
-    - -36.0
-    - -19.0
-
-  - target:
-    - -14.5
-    - -40.0
-    - -8.0
-    offset:
-    - -24.0
-    - -36.0
-    - -18.5
-
-  - target:
-    - -14.0
-    - -40.0
-    - -8.0
-    offset:
-    - -14.5
-    - -40.0
-    - -8.0
-
-  - target:
-    - -4.5
-    - -30.5
-    - -17.0
-    offset:
-    - -14.0
-    - -40.0
-    - -8.0
+  binvox: map/venice.binvox
